# rfz

./: .gitignore  Cargo.toml  README.md  test.sh
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  ci.yml  release.yml
extras/: rfz-sync.service  rfz-sync.timer
src/: cli.rs  cmd.rs  collection.rs  document.rs  document_set.rs  errors.rs  lib.rs  main.rs  test.rs
tests/resources/: draft-duplicates-00.html  draft-ietf-sidrops-rpkimaxlen-04.html  draft-ietf-sidrops-rpkimaxlen-05.html  rfc6468.html
