[package]
name = "rfz"
version = "0.2.0"
authors = ["Ben Maddison <benm@workonline.africa>"]
edition = "2018"
description = "An indexer and metadata viewer for repositories of IETF documents synced to the local file system."
readme = "README.md"
repository = "https://github.com/benmaddison/rfz"
homepage = "https://github.com/benmaddison/rfz"
license = "MIT"
keywords = ["ietf", "rfc", "internet-draft"]

[dependencies]
ansi_term = "0.12"
clap = "2.33"
directories = "3.0"
kuchiki = "0.8"
lazycell = "1.3"
num_cpus = "1.0"
pipeliner = "1.0"
